[project]
name = "vetlog-buddy"
version = "1.3.0.1"
description = "MySQL database analyzer for Vetlog"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache 2.0" }
authors = [{ name = "Jose Morales", email = "contact@josdem.io" }]
dependencies = [
  "coverage>=7.11.3",
  "mysql-connector-python>=9.5.0",
  "pymox>=1.4.1",
  "pytest>=9.0.1",
  "python-dotenv>=1.2.1",
  "ruff>=0.14.5",
]

[project.scripts]
filter_by_username = "vetlog_buddy.main:flter_by_username"
filter_by_name = "vetlog_buddy.main:flter_by_name"
filter_by_last_name = "vetlog_buddy.main:flter_by_last_name"
suggest = "vetlog_buddy.main:suggest"
vaccines = "vetlog_buddy.main:vaccines"
# Couldn't decide between `check` and `version` so I added both
check = "vetlog_buddy.main:cli_version_check"
version = "vetlog_buddy.main:cli_version_check"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
